# TUI

./: Menu.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: smoke_test.py
tui/: __init__.py  __main__.py  cli.py  utils.py
tui/modules/: aws.py  docker.py  hadoop.py  kubernetes.py  linux.py  lvm.py  webserver.py
