[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tui-devops"
version = "2.0.0"
description = "Terminal User Interface for Cloud & DevOps tools"
requires-python = ">=3.10"
dependencies = [
    "pyfiglet>=0.8",
]

[project.scripts]
tui = "tui.__main__:main"
